refactor pipeline logic for fetching, caching and kafka-publishing